Adds HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Christine Grace Santos
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Christine Santos</title>
+</head>
+
+<body>
+  <h1>Christine Santos</h1>
+</body>
+
+</html>
